// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Should support multiple mode in select component 1`] = `
<div class="container">
  <div class="fect-select multiple" style="--select-minWidth: 160px; --select-height: calc(1.688 * var(--fect-gap)); --select-fontSize: 14px;" data-size="medium"><input class="fect-select__input" type="search" role="combobox" aria-haspopup="listbox" readonly="" unselectable="on" aria-expanded="false">
    <div class="fect-grid__group fect-grid__group--wrap" style="align-content: flex-start; align-items: stretch; flex-direction: row; justify-content: flex-start; --fect-grid-gap: calc(0.5 * 16px * 1/3);">
      <div class="fect-grid" style="align-content: flex-start; align-items: stretch; flex-direction: row; justify-content: flex-start;">
        <div class="fect-select__item">吃饭<div class="fect-select__clearIcon"><svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" color="currentColor">
              <path d="M18 6L6 18"></path>
              <path d="M6 6l12 12"></path>
            </svg></div>
        </div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
    <div class="fect-select__icon-context"><svg viewBox="0 0 24 24" width="20px" height="20px" stroke-width="1" stroke-linecap="round" color="currentColor" stroke="currentColor" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
        <path d="M6 9l6 6 6-6"></path>
      </svg></div>
  </div>
  <div class="fect-select__dropdown" style="visibility: hidden; width: 0px; top: -3px; left: 0px;">
    <div class="fect-option ">吃饭</div>
    <div class="fect-option ">摸鱼</div>
  </div>
</div>
`;

exports[`Select select props should be work correctly 1`] = `
<div class="container">
  <div class="fect-select disabled" style="--select-minWidth: 160px; --select-height: calc(1.688 * var(--fect-gap)); --select-fontSize: 14px;" data-size="xxx"><input class="fect-select__input" type="search" role="combobox" aria-haspopup="listbox" readonly="" unselectable="on" aria-expanded="false"><span class="value fect-select__placeholder">mock placeholder test</span>
    <!--teleport start-->
    <!--teleport end-->
    <div class="fect-select__icon-context"><svg viewBox="0 0 24 24" width="20px" height="20px" stroke-width="1" stroke-linecap="round" color="currentColor" stroke="currentColor" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
        <path d="M6 9l6 6 6-6"></path>
      </svg></div>
  </div>
  <div class="fect-select__dropdown" style="visibility: hidden; width: 0px; top: -3px; left: 0px;">
    <div class="fect-option ">吃饭</div>
    <div class="fect-option disabled">摸鱼</div>
  </div>
</div>
`;
